# frontier-signal

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  MANIFEST.json  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: daily-radar.yml
config/: china_sources.yaml  model_routing.yaml  organizations.yaml  people.yaml  sources.yaml  topics.yaml
data/manual/: china-intake.example.jsonl
docs/: API_REFERENCES.md  OPERATIONS.md  REPORT_EXAMPLE.md  SOURCE_POLICY.md
prompts/: daily_editor.md  extract.md  impact.md  skeptic.md  translate.md
src/frontier_signal/: cli.py  config.py  db.py  dedupe.py  llm.py  pipeline.py  ranking.py  report.py  runner.py  schemas.py  settings.py
src/frontier_signal/collectors/: __init__.py  arxiv.py  base.py  bluesky.py  github.py  hackernews.py  manual.py  openreview.py  rss.py  web.py  x.py  youtube.py
tests/: test_db.py  test_delivery_ledger.py  test_llm.py  test_news_collectors.py  test_pipeline.py  test_ranking.py  test_runner.py  test_schemas.py  test_social_collectors.py
