[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-signal"
version = "0.1.0"
description = "Provenance-first AI/OR technical intelligence pipeline"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "openai>=1.50",
  "openreview-py>=1.48",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
  "rapidfuzz>=3.9",
  "rich>=13.8",
  "SQLAlchemy>=2.0",
  "tenacity>=9.0",
  "typer>=0.12"
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
dev = ["pytest>=8.3", "ruff>=0.6"]

[project.scripts]
frontier-signal = "frontier_signal.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
